--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/roboto": "^5.2.9",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.8",
@@ -21,8 +22,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "laravel-echo": "^2.2.7",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "pusher-js": "^8.4.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
