feat: add reservation system and comprehensive reports dashboard (#10)
* feat(queue): add filter, search, and public queue check

- Add filter by poli and status on /antrean page
- Add search by patient name or queue number
- Add /cek-antrean public page for patients to check queue status
- Show queue position (people ahead)

* feat(display): redesign queue display UI with digital signage style

* feat(display): add voice announcements with chime and ElevenLabs support

* refactor(voice): replace ElevenLabs with Web Speech API stitching

- Remove @elevenlabs/elevenlabs-js dependency
- Implement Indonesian number-to-words conversion
- Use browser speechSynthesis with word stitching
- Clean up env variables

* feat(display): split queue display per Poli and add registration to resepsionis

- Add PolySection component to display queue per Poli separately
- Both Poli Umum and Poli Gigi now visible side-by-side
- Use simple queue numbers (1, 2, 3) without prefix per documentation
- Add 'Daftar Pasien' button to resepsionis page
- Add registration form dialog to resepsionis antrean
- Add mock data for display preview (USE_MOCK_DATA flag)
- Create queue-display.ts helper for grouping queues by Poli

* feat: upgrade display UI, reorganize routes for administration and perawat-asisten, and add patient management

* chore: add Laravel Echo and realtime dependencies for WebSocket support

* infra: update axios config to use environment variable and add Laravel Echo setup

* feat(types): update API types for new reservation and queue system

* feat(services): add reservation, dashboard, config, and report services

* feat(hooks): add hooks for reservation, dashboard, config, and realtime features

* feat(ui): add skeleton loaders, tabs, and schedule picker components

* chore: update route tree for new laporan route

* feat(laporan): add reports route with comprehensive dashboard

* refactor(index): add laporan route link and update navigation

* refactor(antrean): migrate queu

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-# API URL (Currently hardcoded in src/lib/axios.ts as https://sistem-antrean.zeabur.app)
-# VITE_API_URL=https://sistem-antrean.zeabur.app
+# API URL
+VITE_API_BASE_URL=https://sistem-antrean.zeabur.app
+
+# Laravel Reverb Configuration
+VITE_REVERB_APP_KEY=local
+VITE_REVERB_HOST=localhost
+VITE_REVERB_PORT=8080
+VITE_REVERB_SCHEME=http
